# serializer version: 1
# name: test_reauth
  dict({
    'password': 'other_password',
    'url': 'https://my.nc_url.local',
    'username': 'other_user',
    'verify_ssl': True,
  })
# ---
# name: test_user_create_entry
  dict({
    'password': 'nc_pass',
    'url': 'https://my.nc_url.local',
    'username': 'nc_user',
    'verify_ssl': True,
  })
# ---
